Debuged sitsProcessChain.py, pepsdownload.py, sen2corProcess.py,configSen2cor.py. Added a instruction of how to use SITS processing chain.

--- a/sen2corPocessChain/ozone/ozone_melbourne.ipynb
+++ b/sen2corPocessChain/ozone/ozone_melbourne.ipynb
@@ -917,7 +917,9 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -990,6 +992,26 @@
    ],
    "source": [
     "df3.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(317, 2)"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " df3.loc[(df3.daily_date >= '2016-01-01')&(df3.daily_date <= '2016-12-31')].reset_index(drop=True).shape"
    ]
   },
   {
@@ -1298,6 +1320,26 @@
    ],
    "source": [
     "df5.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(318, 3)"
+      ]
+     },
+     "execution_count": 174,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df5.shape"
    ]
   },
   {
